# context-reset

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  context_reset.py  new_session.py  pyproject.toml
.claude/rules/: two-layer-state-handoff.md
.claude/worktrees/split-reset-new-session/: .gitignore  CLAUDE.md  README.md  context_reset.py  new_session.py  pyproject.toml  task_claims.py
.claude/worktrees/split-reset-new-session/.github/: publish.json
.claude/worktrees/split-reset-new-session/.github/workflows/: secret-scan.yml
.claude/worktrees/split-reset-new-session/scripts/: bootstrap.ps1  test.py  test_task_claims.py
.claude/worktrees/split-reset-new-session/scripts/test/: test-T006-parent-trust.sh
.github/workflows/: test.yml
docs/: FEEDBACK-LOOP.md
reports/: context-reset-admin-reference.html  context-reset-user-guide.html  macos-ec2-tests.txt  task-claims-tests.txt  windows-11-dryrun.txt  windows-11-tests.txt  wsl-tests.txt
scripts/: archive-ec2-test-windows.sh  configure_hook.py  ec2-check-network.sh  ec2-create-windows-test.sh  ec2-debug-ssh.sh  ec2-enable-ssh-rdp.sh  ec2-fix-sg.sh  ec2-get-password.sh  ec2-mac-setup.sh  ec2-recreate-windows.sh  ec2-ssm-check.sh  ec2-test-windows.sh  ec2-test.sh  ec2-win-add-sshkey.sh  ec2-win-install-python.sh  ec2-win-provision.sh  ec2-win-setup.sh  openclaw-checkin.py  stop-message.txt  test.py  test_focus_live.py  wsl-test.sh
scripts/test/: test-T007-stop-flag.sh  test-filter-boilerplate.sh
specs/filter-boilerplate/: tasks.md
specs/pretrust-fix/: tasks.md
